infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    networking.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: gota.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodeapp-service
              port:
                number: 3000
